Micronaut PUT/POST Data Endpoint Method generation added.